--- a/Estimated/EstimationDetailViewController/EstimationDetailChartCell.xib
+++ b/Estimated/EstimationDetailViewController/EstimationDetailChartCell.xib
@@ -12,14 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChartCell" rowHeight="328" id="KGk-i7-Jjw" customClass="ChartCell" customModule="Estimated" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EstimationDetailChartCell" rowHeight="328" id="KGk-i7-Jjw" customClass="EstimationDetailChartCell" customModule="Estimated" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="446" height="328"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="446" height="327.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tj0-8X-eAG">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tj0-8X-eAG" customClass="BarChartView" customModule="Charts">
                         <rect key="frame" x="20" y="12" width="406" height="303.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -32,6 +32,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="barChartView" destination="tj0-8X-eAG" id="o5I-js-7t2"/>
+            </connections>
             <point key="canvasLocation" x="228.98550724637684" y="247.76785714285714"/>
         </tableViewCell>
     </objects>
