--- a/Estimated/Views/TaskNameCell.xib
+++ b/Estimated/Views/TaskNameCell.xib
@@ -23,7 +23,7 @@
                         <rect key="frame" x="16" y="8" width="395" height="147.5"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                         <connections>
                             <outlet property="delegate" destination="KGk-i7-Jjw" id="hQs-JK-yXa"/>
                         </connections>
